--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,13 +1,28 @@
 .nav-container {
   display: flex;
   justify-content: space-between;
-  padding: 1rem 2rem;
+  align-items: center;
+  padding: 1rem 1.5rem;
   color: #fff;
   background-color: #12121a;
 }
 
-.logo > h2 {
-  margin: 0;
+.logo {
+  width: 160px;
+  height: 25px;
+}
+.logo img {
+  width: 100%;
+  height: 100%;
+}
+
+.project-name {
+  padding: 0.4rem 1rem;
+  outline: none;
+  border: 1px solid #646cff;
+  background-color: #282c34;
+  color: #fff;
+  border-radius: 5px;
 }
 
 .theme-button {
@@ -17,6 +32,8 @@
   padding: 0.3rem;
   border-radius: 50%;
   background-color: transparent;
+  cursor: pointer;
+  margin-right: 0.5rem;
 }
 
 .theme-button:hover {
@@ -33,4 +50,24 @@
 
 .sun-icon {
   color: yellow;
+}
+
+.account-settings {
+  display: flex;
+  align-items: center;
+}
+
+.save-btn {
+  border: none;
+  border-radius: 5px;
+  outline: none;
+  background-color: #646cff;
+  padding: 0.5rem 1rem;
+  margin-right: 0.5rem;
+  color: #fff;
+  cursor: pointer;
+}
+.save-btn:hover {
+  background-color: #4951ec;
+  transition: 0.3s ease-in-out;
 }
