--- a/src/components/AccountMenu/AccountMenu.css
+++ b/src/components/AccountMenu/AccountMenu.css
@@ -10,7 +10,7 @@
   transition: 0.2s ease-in;
   border: 2px solid #282c34;
   font-size: 20px;
-  background-color: #282c34;
+  background-color: #373b44;
 }
 
 .menu-symbol:hover {
